Updated README. Renamed test methods, variable names.